[package]
name = "amargo"
version = "0.2.2"
authors = ["Roberto Vidal <vidal.roberto.j@gmail.com>"]
edition = "2018"
description = "An unsafe experiment"
license = "GPL-3.0-or-later"
repository = "https://github.com/jrvidal/amargo"
readme = "README.md"
default-run = "ruugts"

[dependencies]
syn = { version = "1.0.16", features = ["full", "visit-mut", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
tempfile = "3.1"
log = "0.4"
env_logger = "0.7"
clap = "2.33"
